# bnbkchagama

./: .gitignore  LICENSE.md  package-lock.json  package.json  vite.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/assets/: .gitignore
